@@ -12,6 +12,9 @@ What's New in Python 2.3 beta 1?
 Core and builtins
 -----------------
 
+- The repr() of a weakref object now shows the __name__ attribute of
+  the referenced object, if it has one.
+
 - super() no longer ignores data descriptors, except __class__.  See
   the thread started at
   http://mail.python.org/pipermail/python-dev/2003-April/034338.html
